<resources>
    <string name="app_name">BAJPS3</string>
    <string name="title_movies">Movies</string>
    <string name="title_tvshows">TV Shows</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_details">Details</string>
    <string name="text_rating">Rating:</string>
    <string name="text_duration">Duration:</string>
    <string name="text_language">Language:</string>
    <string name="text_score">User Score</string>
    <string name="text_overview">Overview</string>
    <string name="deskripsi_gambar">Poster Film</string>
    <string name="text_watch_trailer">Watch Trailer</string>
    <string name="retry">Retry</string>
    <string name="text_empty_favorite">Belum ada favorit.</string>
</resources>